fix(form) Improved styling for schema head on mobile

--- a/less/forms-angular-bs2-specific.less
+++ b/less/forms-angular-bs2-specific.less
@@ -76,3 +76,11 @@ form {
 .fileupload-buttonbar {
   margin-left: 0;
 }
+
+@media (max-width: 767px) {
+  form {
+    .schema-head, .schema-foot {
+      padding: 5px 15px;
+    }
+  }
+}
