--- a/less/forms-angular-bs3-specific.less
+++ b/less/forms-angular-bs3-specific.less
@@ -154,4 +154,11 @@ form {
   .navbar-form.navbar-right:last-child {
     margin-right: -15px;
   }
+
+  form {
+    .schema-head, .schema-foot {
+      padding: 5px 15px;
+    }
+  }
+
 }
